@@ -8,8 +8,6 @@ use Test::Deep;
 use Test::Fatal;
 use Path::Tiny;
 
-use Test::Requires { 'Dist::Zilla::Plugin::ModuleBuildTiny' => '0.011' };
-
 my $tzil = Builder->from_config(
     { dist_root => 'does-not-exist' },
     {
@@ -17,9 +15,9 @@ my $tzil = Builder->from_config(
             path(qw(source dist.ini)) => simple_ini(
                 [ GatherDir => ],
                 [ MetaConfig => ],
-                [ ModuleBuildTiny => { ':version' => '0.011', static => 'auto' } ],
+                [ MakeMaker => ],
                 [ MetaJSON => ],
-                [ 'StaticInstall' => { mode => 'auto' } ],
+                [ 'StaticInstall' => { mode => 'off' } ],
             ),
             path(qw(source lib Foo.pm)) => "package Foo;\n1;\n",
         },
@@ -36,14 +34,14 @@ is(
 cmp_deeply(
     $tzil->distmeta,
     superhashof({
-        x_static_install => 1,
+        x_static_install => 0,
         x_Dist_Zilla => superhashof({
             plugins => supersetof(
                 {
                     class => 'Dist::Zilla::Plugin::StaticInstall',
                     config => {
                         'Dist::Zilla::Plugin::StaticInstall' => {
-                            mode => 'auto',
+                            mode => 'off',
                             dry_run => 0,
                         },
                     },
@@ -53,25 +51,26 @@ cmp_deeply(
             ),
         }),
     }),
-    'plugin metadata indicates a static install',
+    'x_static_install is still 0 even though the distribution is eligible for static install',
 ) or diag 'got distmeta: ', explain $tzil->distmeta;
-
-# TODO: replace with Test::Deep::notmember($string)
-use List::Util 1.33 'none';
-sub notmember {
-    my $not_expects = shift;
-    code(sub {
-        my $got = shift;
-        return (0, 'item is not an ARRAY') if ref $got ne 'ARRAY';
-        none { eq_deeply($_, $not_expects) } @$got
-            ? 1 : (0, 'item exists: ', explain $got);
-    })
-}
 
 cmp_deeply(
     $tzil->log_messages,
-    notmember('[StaticInstall] setting x_static_install to 1'),
-    'did not log setting the flag value - [ModuleBuildTiny] beat us to it',
+    supersetof(map { '[StaticInstall] ' . $_ }
+        'checking dynamic_config',
+        'checking configure prereqs',
+        'checking build prereqs',
+        'checking sharedirs',
+        'checking installer plugins',
+        'checking for munging of Makefile.PL',
+        'checking META.json',
+        'checking META.json',
+        'checking for .xs files',
+        'checking .pm, .pod, .pl files',
+        'setting x_static_install to 0',
+        'would set x_static_install to 1',
+    ),
+    'appropriate logging for distribution that is eligible for static installation but the author is opting out',
 );
 
 diag 'got log messages: ', explain $tzil->log_messages
